# swagger-llm-ui

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.desloppify/: config.json  config.json.bak  plan.json  plan.json.bak  review_packet_blind.json  state-python.json  state-python.json.bak
.desloppify/review_packets/: holistic_packet_20260318_015925.json  holistic_packet_20260318_033046.json
.desloppify/subagents/runs/20260318_015925/: holistic_issues_merged.json  run_summary.json
.desloppify/subagents/runs/20260318_015925/prompts/: batch-1.md  batch-10.md  batch-11.md  batch-12.md  batch-13.md  batch-14.md  batch-15.md  batch-16.md  batch-17.md  batch-18.md  batch-19.md  batch-2.md  batch-20.md  batch-3.md  batch-4.md  batch-5.md  batch-6.md  batch-7.md  batch-8.md  batch-9.md
.desloppify/subagents/runs/20260318_015925/results/: batch-1.raw.txt  batch-10.raw.txt  batch-11.raw.txt  batch-12.raw.txt  batch-13.raw.txt  batch-14.raw.txt  batch-15.raw.txt  batch-16.raw.txt  batch-17.raw.txt  batch-18.raw.txt  (+10 more)
.desloppify/subagents/runs/20260318_033046/: run_summary.json
.github/workflows/: ci.yml  publish-to-pypi.yml  publish-to-testpypi.yml  release.yml
docs/: index.html
examples/: demo_server.py
src/docbuddy/: _version.py  cli.py  plugin.py  standalone.html
src/docbuddy/static/: agent.js  chat.js  core.js  docbuddy-chat.js  docbuddy-core.js  docbuddy-plugin.js  docbuddy-settings.js  docbuddy-workflow.js  llm-layout-plugin.js  llm-settings-plugin.js  plugin.js  settings.js  workflow.js
src/docbuddy/static/themes/: dark-theme.css  light-theme.css  swagger-overrides.css
src/docbuddy/templates/: swagger_ui.html
tests/: test_plugin.py
(+15 files in other folders)
