[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docbuddy"
version = "0.6.0"
description = "Add an AI Assistant to your `/docs` page."
description-content-type = "text/markdown"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Kyle Pearson" }
]
keywords = ["fastapi", "swagger", "llm", "openai", "docs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.95.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "uvicorn[standard]>=0.20.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.23.0",
    "pre-commit",
    "ruff",
    "mypy",
    "bandit>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/pearsonkyle/docbuddy"
Repository = "https://github.com/pearsonkyle/docbuddy"

[tool.hatch.build.targets.wheel]
packages = ["src/docbuddy"]

[project.scripts]
docbuddy = "docbuddy.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.envs.default]
dependencies = [
    "pre-commit",
    "ruff",
    "mypy",
]

[tool.hatch.envs.default.scripts]
format = "pre-commit run --all-files"
lint = "pre-commit run --all-files"
test = "pytest tests/ -v"
